--- a/vignettes/setting_up_secsse.Rmd
+++ b/vignettes/setting_up_secsse.Rmd
@@ -41,34 +41,34 @@ lambda_matrices
 
 We see that there are four lambda matrices, one for each of the combined states (e.g. for each combination of observed and hidden states). So in this case we have our two observed states S and N, and the two hidden states A and B. This results in the four real states SA, NA, SB and NB. 
 
+#### Extinction
+
+We also need to specify an extinction rate:
+
+```{r adding extinction}
+mus <- secsse::create_mus(state_names = colnames(trans_matrix),
+                          num_concealed_states = 2,
+                          model = "CR",
+                          lambdas = lambda_matrices)
+mus
+```
+
 #### Q matrix
 
 To specify a q-matrix, we again need to specify the transitions using a transition list. Again, we use the standard settings.
 
 ```{r default_trans} 
- q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
-                                         num_concealed_states = 2,
-                                         lambda_matrices = lambda_matrices)
- q_list
+q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
+                                        num_concealed_states = 2,
+                                        mus = mus)
+
+q_list
  
- trans_matrix <- secsse::create_transition_matrix(state_names = colnames(lambda_matrices[[1]]),
+trans_matrix <- secsse::create_transition_matrix(state_names = colnames(lambda_matrices[[1]]),
                                                   transition_list = q_list)
- trans_matrix
+trans_matrix
 ```
-Thus, we find that transitions in the upper half are driven by one transition rate, (A->B), and transitions in the lower half of the q matrix are driven by the other transition rate (B -> A).
-
-#### Extinction
-
-Now, we are almost ready to start our analysis. We now need to add an extinction rate:
-
-```{r adding extinction}
- mus <- secsse::create_mus(state_names = colnames(trans_matrix),
-                           num_concealed_states = 2,
-                           model = "CR",
-                           q_matrix = trans_matrix)
- mus
-```
-
+Here, we find transitions from A->B, B->A but also S->N and N->S.
 
 #### Simulating data
 Now, we can use our settings to perform an analysis.
@@ -76,30 +76,139 @@ Because we are lacking empirical data in this example, we will simulate a tree f
 To do so, we first need to specify our focal rates, and then fill them in.
 
 ```{r fill in parameters}
-  speciation <- 0.5
-  q_ab <- 0.1
-  q_ba <- 0.1
-  extinction <- 0.0
-  params <- c(speciation, q_ab, q_ba, extinction)
+
+speciation <- 0.5
+extinction <- 0.0
+q_ab <- 0.5
+q_ba <- 0.5
+sp_ns <- 0.2
+sp_sn <- 0.2
+
+params <- c(speciation, extinction, sp_ns, sp_sn, q_ab, q_ba)
   
-  lambda_matrices_p <- secsse::fill_in(lambda_matrices,
-                                     params)
-  trans_matrix_p <- secsse::fill_in(trans_matrix,
-                                  params)
-  mus_p <- secsse::fill_in(mus,
-                         params)
+lambda_matrices_p <- secsse::fill_in(lambda_matrices,
+                                   params)
+trans_matrix_p <- secsse::fill_in(trans_matrix,
+                                params)
+mus_p <- secsse::fill_in(mus,
+                       params)
 ```
 
-With the values replaced,
+With the values replaced, we can now simulate an "empirical" dataset:
 
 ```{r simulate tree}
 simulated_tree <- secsse::secsse_sim(lambdas = lambda_matrices_p,
-                                 mus = mus_p,
-                                 qs = trans_matrix_p,
-                                 crown_age = 10,
-                                 conditioning = )
-traits <- simulated_tree$obs_traits
+                                     mus = mus_p,
+                                     qs = trans_matrix_p,
+                                     num_concealed_states = 2,
+                                     crown_age = 5,
+                                     conditioning = "obs_states",
+                                     verbose = TRUE)
+sim_traits <- simulated_tree$obs_traits
 focal_tree <- simulated_tree$phy
 ```
 
+#### Maximum Likelihood
 
+Given this data, we can now perform our maximum likelihood analysis. Here, we
+choose to initialize our parameters with random values in [0, 1], we use 
+multithreading to speed up the analysis, and use the subplex optimization 
+method, as this has shown to be more reliable.
+
+```{r maximum likelihood}
+param_posit <- list()
+param_posit[[1]] <- lambda_matrices
+param_posit[[2]] <- mus
+param_posit[[3]] <- trans_matrix
+
+initpars <- runif(n = max(trans_matrix, na.rm = TRUE), 0, 1)
+
+answ <- secsse::cla_secsse_ml(phy = focal_tree,
+                              traits = sim_traits,
+                              num_concealed_states = 2,
+                              idparslist = param_posit,
+                              idparsopt = c(1, 2, 3, 4, 5, 6),
+                              initparsopt = initpars,
+                              idparsfix = c(0),
+                              parsfix = c(0.0),
+                              sampling_fraction = c(1, 1),
+                              optimmethod = "subplex",
+                              verbose = FALSE,
+                              num_threads = 6)
+```
+
+We can now extract our parameters to get them in the right place:
+
+```{r extract_pars}
+found_pars_vals <- secsse::extract_par_vals(param_posit, answ$MLpars)
+found_pars_vals
+```
+
+We have done this now only for the CR model, but we can also use the 
+CTD and ETD model. Let's do that semi-automagically! We first define a generic
+function to optimize for a model:
+```{r define_model_function}
+fit_model <- function(tree, traits, model) {
+  focal_list <- secsse::create_default_transition_list(state_names = c("S", "N"))
+  lambda_matrices <- secsse::create_lambda_matrices(state_names = c("S", "N"),
+                                                  num_concealed_states = 2, 
+                                                  transition_list = focal_list,
+                                                  model = model)
+  mus <- secsse::create_mus(state_names = colnames(trans_matrix),
+                          num_concealed_states = 2,
+                          model = model,
+                          lambdas = lambda_matrices)
+  q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
+                                          num_concealed_states = 2,
+                                          mus = mus)
+
+  trans_matrix <- secsse::create_transition_matrix(state_names = 
+                                                     colnames(lambda_matrices[[1]]),
+                                                 transition_list = q_list)
+  
+  param_posit <- list()
+  param_posit[[1]] <- lambda_matrices
+  param_posit[[2]] <- mus
+  param_posit[[3]] <- trans_matrix
+  
+  max_indicator <- max(trans_matrix, na.rm = TRUE)
+  
+  initpars <- runif(n = max_indicator, 0, 1)
+
+  answ <- secsse::cla_secsse_ml(phy = focal_tree,
+                              traits = traits,
+                              num_concealed_states = 2,
+                              idparslist = param_posit,
+                              idparsopt = 1:max_indicator,
+                              initparsopt = initpars,
+                              idparsfix = c(0),
+                              parsfix = c(0.0),
+                              sampling_fraction = c(1, 1),
+                              optimmethod = "subplex",
+                              verbose = FALSE,
+                              num_threads = 6)
+  found_pars_vals <- secsse::extract_par_vals(param_posit, answ$MLpars)
+  aic <- 2 * max_indicator - 2 * as.numeric(answ$ML)
+  return(list(pars = found_pars_vals,
+              ml = as.numeric(answ$ML),
+              aic = aic))
+}
+```
+
+And then we loop over the different models:
+
+```{r model looping}
+found <- c()
+for (focal_model in c("CR", "CTD", "ETD")) {
+  local_answ <- fit_model(tree = focal_tree, 
+                          traits = sim_traits,
+                          model = focal_model)
+  to_add <- c(focal_model, local_answ$ml, local_answ$aic)
+  found <- rbind(found, to_add)
+}
+
+found
+```
+
+Because we have simulated the tree using the CR model, we expct the model with
+the lowest AIC to be the CR model again, and indeed we do find this!
